  Changes:
    - Fixed various inconsistencies with the UI (thanks Raiguard!)
    - Updated the Russian translation (thanks METAKOT!)
    - Updated the Chinese translation (thanks Ph.X!)
    - Changed the hotkey to reset a machine from alt-right-click to control-right-click, as this is more consistent with the control-right-click action deleting things
  Bugfixes:
    - Fixed a crash when deleting subfactories in your archive
    - Fixed that the fuel picker would sometimes show more than one kind of fuel as the currently selected one

---------------------------------------------------------------------------------------------------
Version: 1.1.13
Date: 24. 12. 2020
  Bugfixes:
    - Fixed that the subfactory name would not be shown if there was both an icon and a name

---------------------------------------------------------------------------------------------------
Version: 1.1.12
Date: 23. 12. 2020
  Features:
    - Subfactories you delete will now remain in the archive for 15 minutes in case you change your mind about deleting them
    - Added a tooltip to invalid subfactories listing the modset changes that could have lead to it becoming invalid
    - You can now alt-click the recipe line toggle switch (which is an optional column in preferences) to toggle all the other recipe lines, meaning all the ones you did not click on (thanks METAKOT!)
  Bugfixes:
    - Fixed that when in the items/s/machine-view, the values shown were totally wrong
    - Fixed that you could enable/disable the matrix solver while a subfactory is in archive
    - Fixed that the indicated timescale-view button would not update correctly when switching between subfactories
    - Fixed that setting the subfactory icon to '?' would crash (you can't use the question mark as an icon now)

---------------------------------------------------------------------------------------------------
Version: 1.1.11
Date: 19. 12. 2020
  Bugfixes: