@@ -56,7 +56,7 @@ local function update_line(line_data, aggregate)
     if machine_limit.limit ~= nil then
         local capped_production_ratio = calculation.util.determine_production_ratio(crafts_per_tick,
           machine_limit.limit, timescale, machine_proto.launch_sequence_time)
-        production_ratio = machine_limit.hard_limit and
+        production_ratio = machine_limit.force_limit and
           capped_production_ratio or math.min(production_ratio, capped_production_ratio)
     end
 
