@@ -9,7 +9,12 @@ end
 function migration.subfactory(subfactory)
     for _, floor in pairs(Subfactory.get_all_floors(subfactory)) do
         for _, line in pairs(Floor.get_in_order(floor, "Line")) do
-            if not line.subfloor then line.done = false end
+            if not line.subfloor then
+                line.done = false
+
+                line.machine.force_limit = line.machine.hard_limit
+                line.machine.hard_limit = nil
+            end
         end
     end
 end
@@ -21,6 +26,9 @@ function migration.packed_subfactory(packed_subfactory)
                 update_lines(packed_line.subfloor)
             else
                 packed_line.done = false
+
+                packed_line.machine.force_limit = packed_line.machine.hard_limit
+                packed_line.machine.hard_limit = nil
             end
         end
     end
