@@ -116,7 +116,7 @@ pro_archive=The archive is a good way to store subfactories that aren’t in act
 pro_settings=Some advanced features aren’t active by default. Instead, they hide in mod settings (Menu→Settings→Mod Settings→Factory Planner). Take a look, you’ll find things like interface size adjustment and some defaults to be set.
 pro_shortcuts=You can configure several keyboard shortcuts to get around the interface faster. They can be found in ’Controls’ (Menu→Settings→Controls→Factory Planner).
 pro_line_fuel=The kind of fuel that a recipe uses can be changed by left-clicking its button (blue background). By default, it will use the choice you make in preferences.
-pro_machine_limits=You can set a limit on the amount of machines a recipe uses. Either set a ’soft’ limit that prevents it from going over the configured amount, or set a ’hard’ limit, which will force the recipe to use the configured amount of machines.
+pro_machine_limits=You can set a limit on the amount of machines a recipe uses. Either set a ’soft’ limit that prevents it from going over the configured amount, or set a forced limit, which will force the recipe to use the configured amount of machines.
 pro_priority_product=Every recipe with more than one relevant products can have a priority product. You set it by right-clicking on the product you want to be prioritized. This has the effect that the demands on that item are met exactly, irrespective of any other demand.
 
 # Chooser dialog
@@ -131,8 +131,8 @@ options_machine_title=Set machine limit
 options_machine_text=Set a machine limit for ’__1__’
 options_machine_limit=Machine limit
 options_machine_limit_tt=Limits the number of machines this line will use. The actual amount might be lower if fewer machines are needed.
-options_machine_hard_limit=Hard limit
-options_machine_hard_limit_tt=Forces the number of machines to be the exact amount specified above, even if this leads to overproduction. Only makes sense in combination with a machine limit.
+options_machine_force_limit=Force limit
+options_machine_force_limit_tt=Forces the number of machines to be the exact amount specified above, even if this leads to overproduction. Only makes sense in combination with a machine limit.
 
 # Item options dialog
 options_item_title=Set __1__ amount
@@ -322,7 +322,7 @@ column_comment=Comment
 recipe_subfloor_attached=subfloor attached
 recipe_consumes_byproduct=consumes byproduct
 subfloor_machine_count=__1__ __2__ in use on this subfloor
-machine_limit_hard=Hard limit set [__1__]
+machine_limit_force=Exact limit set [__1__]
 machine_limit_enforced=Limit enforced [__1__]
 machine_limit_set=Limit set [__1__]
 add_beacon=Add a beacon
